[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the Blue Pill"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "bsp"
repository = "https://github.com/japaric/blue-pill"
version = "0.1.0"

[dependencies]
static-ref = "0.1.0"
volatile-register = "0.2.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.either]
default-features = false
version = "1.1.0"

[dependencies.stm32f411]
optional = false
path = "../stm32f411/"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"

[dependencies.nb]
git = "https://github.com/japaric/nb"
