[package]
authors = ["Nikhil K <nikhilkalige@gmail.com"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for STM32F411"
keywords = ["arm", "cortex-m", "stm32"]
license = "MIT"
name = "bsp"
repository = "https://github.com/nikhilkalige/bsp"
version = "0.1.0"

# [dependencies]
# static-ref = "0.2.0"
# volatile-register = "0.2.0"
# heapless = "0.1.0"
# generic-array = "*"
# cortex-m = "0.3.0"
# cortex-m-semihosting = "0.2.0"

# [dependencies.fast_fmt]
# features = []
# default-features = false
# version = "0.1.3"


[dependencies]
cortex-m = { git = "https://github.com/japaric/cortex-m" }
static-ref = "0.2.0"
volatile-register = "0.2.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.either]
default-features = false
version = "1.3.0"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies.stm32f411]
#branch = "singletons"
features = ["rt"]
path = "../stm32f411/"
#git = "https://github.com/japaric/stm32f103xx"

[dev-dependencies]
heapless = "0.2.0"

[dev-dependencies.cortex-m]
git = "https://github.com/japaric/cortex-m"

[dev-dependencies.cortex-m-rt]
version = "0.3.6"

[dev-dependencies.cortex-m-rtfm]
git = "https://github.com/japaric/cortex-m-rtfm"

[dev-dependencies.mfrc522]
git = "https://github.com/japaric/mfrc522"

[dev-dependencies.mpu9250]
git = "https://github.com/japaric/mpu9250"

[profile.release]
debug = true
lto = true